--- a/image_simulation_with_abtem.ipynb
+++ b/image_simulation_with_abtem.ipynb
@@ -5,7 +5,7 @@
    "id": "9eb2f2a6",
    "metadata": {},
    "source": [
-    "# Introduction to multislice simulations with *ab*TEM - basics\n",
+    "# Introduction to multislice simulations with *ab*TEM\n",
     "\n",
     "This tutorial is a short introduction to image simulation with *ab*TEM. The tutorial covers some basic principles such as potential and wave functions and presents examples for CBED, STEM and HRTEM and simulations. For more in depth information, see the following resources:\n",
     "\n",
@@ -820,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
